WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158346
Fix the !ENABLE(INDEXED_DATABASE) build after
r201575
https://bugs.webkit.org/show_bug.cgi?id=158346
Summary
Fix the !ENABLE(INDEXED_DATABASE) build after r201575
Csaba Osztrogonác
Reported
2016-06-03 07:43:39 PDT
http://trac.webkit.org/changeset/201575
broke the !ENABLE(INDEXED_DATABASE) build: ../../Source/WebKit2/DatabaseProcess/DatabaseProcess.cpp: In member function 'void WebKit::DatabaseProcess::fetchWebsiteData(WebCore::SessionID, WTF::OptionSet<WebKit::WebsiteDataType>, uint64_t)': ../../Source/WebKit2/DatabaseProcess/DatabaseProcess.cpp:197:10: error: variable 'completionHandler' set but not used [-Werror=unused-but-set-variable] ../../Source/WebKit2/DatabaseProcess/DatabaseProcess.cpp: In member function 'void WebKit::DatabaseProcess::deleteWebsiteData(WebCore::SessionID, WTF::OptionSet<WebKit::WebsiteDataType>, std::chrono::_V2::system_clock::time_point, uint64_t)': ../../Source/WebKit2/DatabaseProcess/DatabaseProcess.cpp:219:10: error: variable 'completionHandler' set but not used [-Werror=unused-but-set-variable] ../../Source/WebKit2/DatabaseProcess/DatabaseProcess.cpp: In member function 'void WebKit::DatabaseProcess::deleteWebsiteDataForOrigins(WebCore::SessionID, WTF::OptionSet<WebKit::WebsiteDataType>, const WTF::Vector<WebCore::SecurityOriginData>&, uint64_t)': ../../Source/WebKit2/DatabaseProcess/DatabaseProcess.cpp:231:10: error: variable 'completionHandler' set but not used [-Werror=unused-but-set-variable]
Attachments
Patch
(3.25 KB, patch)
2016-06-03 07:47 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2016-06-03 07:47:00 PDT
Created
attachment 280442
[details]
Patch
WebKit Commit Bot
Comment 2
2016-06-03 09:12:04 PDT
Comment on
attachment 280442
[details]
Patch Clearing flags on attachment: 280442 Committed
r201643
: <
http://trac.webkit.org/changeset/201643
>
WebKit Commit Bot
Comment 3
2016-06-03 09:12:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug