Fix the !ENABLE(INDEXED_DATABASE) build after r201575 https://bugs.webkit.org/show_bug.cgi?id=158346

Reviewed by Brady Eidson.

* DatabaseProcess/DatabaseProcess.cpp:
(WebKit::DatabaseProcess::fetchWebsiteData):
(WebKit::DatabaseProcess::deleteWebsiteData):
(WebKit::DatabaseProcess::deleteWebsiteDataForOrigins):


Canonical link: https://commits.webkit.org/176429@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201643 268f45cc-cd09-0410-ab3c-d52691b4dbfc